--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,6 +1,6 @@
 COMPOSE_PROJECT_NAME=crawler
-USER_NAME=you docker hub user name
+USER_NAME=deron73
 MONGO_VERSION=3.2
-RABBIT_VERSION=3.8
-CRAWLER_UI_VERSION=latest
-CRAWLER_ENGINE_VERSION=latest
+RABBIT_VERSION=3-management
+CRAWLER_UI_VERSION=1.0
+CRAWLER_ENGINE_VERSION=1.0
