--- a/k8s/crawler/ui-ingress.yml
+++ b/k8s/crawler/ui-ingress.yml
@@ -1,15 +1,57 @@
 ---
-apiVersion: extensions/v1beta1
-#apiVersion: networking.k8s.io/v1
+#   apiVersion: networking.k8s.io/v1
+#   kind: Ingress
+#   metadata:
+#     name: example
+#     namespace: foo
+#   spec:
+#     ingressClassName: nginx
+#     rules:
+#       - host: www.example.com
+#         http:
+#           paths:
+#             - pathType: Prefix
+#               backend:
+#                 service:
+#                   name: exampleService
+#                   port:
+#                     number: 80
+#               path: /
+#     # This section is only required if TLS is to be enabled for the Ingress
+#     tls:
+#       - hosts:
+#         - www.example.com
+#         secretName: example-tls
+
+# If TLS is enabled for the Ingress, a Secret containing the certificate and key must also be provided:
+
+#   apiVersion: v1
+#   kind: Secret
+#   metadata:
+#     name: example-tls
+#     namespace: foo
+#   data:
+#     tls.crt: <base64 encoded cert>
+#     tls.key: <base64 encoded key>
+#   type: kubernetes.io/tls
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ui
   annotations:
-    kubernetes.io/ingress.allow-http: "false" # Отключаем проброс HTTP
+    nginx.ingress.kubernetes.io/rewrite-target: "false"
 spec:
   tls:
-  - secretName: ui-ingress # Подключаем наш сертификат
-  #- secretName: secret-tls # Подключаем наш секрет
-  backend:
-    serviceName: ui
-    servicePort: 8000
+  - secretName: secret
+  rules:
+  - http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: ui
+            port:
+              number: 8000
+
+              
