--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "source/search_engine_ui"]
 	path = source/search_engine_ui
 	url = https://github.com/Deron-D/search_engine_ui.git
+[submodule "src/search_engine_ui"]
+	path = src/search_engine_ui
+	url = https://github.com/Deron-D/search_engine_ui.git
