--- a/k8s/crawler/rabbitmq-deployment.yml
+++ b/k8s/crawler/rabbitmq-deployment.yml
@@ -14,7 +14,7 @@ spec:
       component: rabbitmq
   template:
     metadata:
-      name: rabbitmq
+      name: rabbitmq-pod
       labels:
         app: search_engine
         component: rabbitmq
