--- a/k8s/crawler/mongo-deployment.yml
+++ b/k8s/crawler/mongo-deployment.yml
@@ -14,7 +14,7 @@ spec:
       component: mongo
   template:
     metadata:
-      name: mongo
+      name: mongo-pod
       labels:
         app: search_engine
         component: mongo
@@ -22,3 +22,9 @@ spec:
       containers:
       - image: mongo:3.2
         name: mongo
+        volumeMounts:
+        - name: mongo-persistent-storage
+          mountPath: /data/db
+      volumes:
+      - name: mongo-persistent-storage
+        emptyDir: {}
