--- a/k8s/crawler/ui-ingress.yml
+++ b/k8s/crawler/ui-ingress.yml
@@ -1,4 +1,4 @@
----
+#---
 #   apiVersion: networking.k8s.io/v1
 #   kind: Ingress
 #   metadata:
@@ -34,12 +34,32 @@
 #     tls.crt: <base64 encoded cert>
 #     tls.key: <base64 encoded key>
 #   type: kubernetes.io/tls
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: crawler-ui
+#   annotations:
+#     nginx.ingress.kubernetes.io/rewrite-target: "false"
+# spec:
+#   tls:
+#   - secretName: secret
+#   rules:
+#   - http:
+#       paths:
+#       - path: /
+#         pathType: Prefix
+#         backend:
+#           service:
+#             name: crawler-ui
+#             port:
+#               number: 8000
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ui
+  name: ui-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: "false"
+    kubernetes.io/ingress.class: "nginx"
 spec:
   tls:
   - secretName: secret
@@ -54,4 +74,3 @@ spec:
             port:
               number: 8000
 
-              
