--- a/k8s/crawler/ui-service.yml
+++ b/k8s/crawler/ui-service.yml
@@ -7,7 +7,7 @@ metadata:
     app: search_engine
     component: ui
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
   - port: 8000
     protocol: TCP
