--- a/k8s/crawler/ui-ingress.yml
+++ b/k8s/crawler/ui-ingress.yml
@@ -24,35 +24,6 @@
 #         secretName: example-tls
 
 # If TLS is enabled for the Ingress, a Secret containing the certificate and key must also be provided:
-
-#   apiVersion: v1
-#   kind: Secret
-#   metadata:
-#     name: example-tls
-#     namespace: foo
-#   data:
-#     tls.crt: <base64 encoded cert>
-#     tls.key: <base64 encoded key>
-#   type: kubernetes.io/tls
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: crawler-ui
-#   annotations:
-#     nginx.ingress.kubernetes.io/rewrite-target: "false"
-# spec:
-#   tls:
-#   - secretName: secret
-#   rules:
-#   - http:
-#       paths:
-#       - path: /
-#         pathType: Prefix
-#         backend:
-#           service:
-#             name: crawler-ui
-#             port:
-#               number: 8000
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -60,17 +31,21 @@ metadata:
   name: ui-ingress
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    cert-manager.io/cluster-issuer: "letsencrypt"
 spec:
   tls:
-  - secretName: secret
+    - hosts:
+      - 51.250.14.63.nip.io
+      secretName: letsencrypt
   rules:
-  - http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: ui
-            port:
-              number: 8000
+    - host: 51.250.14.63.nip.io
+      http:
+        paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: ui
+              port:
+                number: 8000
 
