--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/Deron-D/search_engine_ui.git
 [submodule "src/search_engine_ui"]
 	path = src/search_engine_ui
-	url = https://github.com/Deron-D/search_engine_ui.git
+	url = git@51.250.92.22:search_engine/search_engine_ui.git
 [submodule "src/search_engine_crawler"]
 	path = src/search_engine_crawler
-	url = https://github.com/Deron-D/search_engine_crawler.git
+	url = git@51.250.92.22:search_engine/search_engine_crawler.git
