--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ deploy:
   stage: deploy
   script:
     - pwd
-    - cd ./crawler/k8s/crawler/
+    - cd ./k8s/crawler/
     - kubectl apply -f namespaces.yml
     - kubectl config set-cluster k8s --server="$KUBE_URL" --insecure-skip-tls-verify=true
     - kubectl config set-credentials admin --token="$KUBE_TOKEN"
