--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,4 +31,7 @@ deploy:
     - kubectl config set-context default --cluster=k8s-4otus --user=admin
     - kubectl config use-context default
     - ls -lr
+    - cd ./k8s/crawler/
+    - kubectl apply -f namespaces.yml
+    - kubectl apply -f . -n dev
   
