--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,8 +35,7 @@ deploy:
     - kubectl config use-context default
     - ls -lr
     - cd ./k8s/crawler/
-    - kubectl apply -f namespaces.yml
     - sed -i "s/deron73\x2Fcrawler-engine:1.0/cr.yandex\x2Fcrpgcgk4jpof2ibnqn7j\x2Fcrawler-engine:gitlab-$CI_COMMIT_SHORT_SHA/" crawler-deployment.yml
     - sed -i "s/deron73\x2Fcrawler-ui:1.0/cr.yandex\x2Fcrpgcgk4jpof2ibnqn7j\x2Fcrawler-ui:gitlab-$CI_COMMIT_SHORT_SHA/" ui-deployment.yml
-    - kubectl apply -f . -n dev
+    - kubectl apply -f . 
   
