--- a/k8s/crawler/ui-ingress.yml
+++ b/k8s/crawler/ui-ingress.yml
@@ -1,29 +1,3 @@
-#---
-#   apiVersion: networking.k8s.io/v1
-#   kind: Ingress
-#   metadata:
-#     name: example
-#     namespace: foo
-#   spec:
-#     ingressClassName: nginx
-#     rules:
-#       - host: www.example.com
-#         http:
-#           paths:
-#             - pathType: Prefix
-#               backend:
-#                 service:
-#                   name: exampleService
-#                   port:
-#                     number: 80
-#               path: /
-#     # This section is only required if TLS is to be enabled for the Ingress
-#     tls:
-#       - hosts:
-#         - www.example.com
-#         secretName: example-tls
-
-# If TLS is enabled for the Ingress, a Secret containing the certificate and key must also be provided:
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -36,6 +10,8 @@ spec:
   tls:
     - hosts:
       - 51.250.87.69.nip.io
+      - grafana.51.250.87.69.nip.io
+      - prometheus.51.250.87.69.nip.io
       secretName: letsencrypt
   rules:
     - host: 51.250.87.69.nip.io
@@ -48,4 +24,29 @@ spec:
               name: ui
               port:
                 number: 8000
+    - host: grafana.51.250.87.69.nip.io
+      http:
+        paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: prometheus-grafana
+              port:
+                number: 80
+    - host: prometheus.51.250.87.69.nip.io
+      http:
+        paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: prometheus-operated
+              port:
+                number: 9090
+
+
+
+
+
 
