--- a/k8s/crawler/ui-ingress.yml
+++ b/k8s/crawler/ui-ingress.yml
@@ -12,6 +12,7 @@ spec:
       - 51.250.87.69.nip.io
       - grafana.51.250.87.69.nip.io
       - prometheus.51.250.87.69.nip.io
+      - alertmanager.51.250.87.69.nip.io
       secretName: letsencrypt
   rules:
     - host: 51.250.87.69.nip.io
@@ -44,3 +45,13 @@ spec:
               name: prometheus-operated
               port:
                 number: 9090
+    - host: alertmanager.51.250.87.69.nip.io
+      http:
+        paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: alertmanager-operated
+              port:
+                number: 9093
