--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,7 @@ build:
 
 test_crawler:
   stage: test
+  image: docker:latest
   services:
     - $DIND
   script:
@@ -34,6 +35,7 @@ test_crawler:
 
 test_ui:
   stage: test
+  image: docker:latest
   services:
     - $DIND
   script:
