Try to run unittests

--- a/src/search_engine_ui/Dockerfile
+++ b/src/search_engine_ui/Dockerfile
@@ -1,16 +1,28 @@
+# FROM python:3.6-alpine
+
+# WORKDIR /app
+# COPY . /app
+
+# RUN pip install -r requirements.txt -r requirements-test.txt
+# # -r requirements-test.txt
+
+# # ENV MONGO mongo
+# # ENV MONGO_PORT 27017
+# ENV FLASK_APP ui.py
+
+# WORKDIR /app/ui
+# EXPOSE 8000
+# #ENTRYPOINT ["gunicorn", "ui:app", "-b", "0.0.0.0"]
+
+# CMD ["sh", "-c", "cd ui && FLASK_APP=ui.py gunicorn ui:app -b 0.0.0.0"]
+
 FROM python:3.6-alpine
+ADD . /
+RUN pip install -r requirements.txt -r requirements-test.txt
 
-WORKDIR /app
-COPY . /app
+WORKDIR /
+ENV FLASK_APP=ui.py
 
-RUN pip install -r requirements.txt
-# -r requirements-test.txt
+CMD ["sh", "-c", "cd ui && FLASK_APP=ui.py gunicorn ui:app -b 0.0.0.0"]
 
-# ENV MONGO mongo
-# ENV MONGO_PORT 27017
-ENV FLASK_APP ui.py
-
-WORKDIR /app/ui
-EXPOSE 8000
-ENTRYPOINT ["gunicorn", "ui:app", "-b", "0.0.0.0"]
-
+#CMD [ "gunicorn", "ui:app", "-b 0.0.0.0" ]
