--- a/docker/Makefile
+++ b/docker/Makefile
@@ -4,13 +4,14 @@ CRAWLER_UI_VERSION=1.0
 CRAWLER_ENGINE_VERSION=1.0
 
 # DOCKER BUILDS
-build:: build-crawler-engine build-crawler-ui 
+# build:: build-crawler-engine build-crawler-ui 
+build:: build-crawler-ui 
 
 build-crawler-engine::
-	cd ../source/search_engine_crawler/ && \
+	cd ../src/search_engine_crawler/ && \
 	docker build --no-cache -t $(USER_NAME)/crawler-engine:$(CRAWLER_ENGINE_VERSION) .
 build-crawler-ui::
-	cd ../source/search_engine_ui/ && \
+	cd ../src/search_engine_ui/ && \
 	docker build --no-cache -t $(USER_NAME)/crawler-ui:$(CRAWLER_UI_VERSION) .
 
 # DOCKER PUSH
